fixed login/register button formatting, size, and alignment

--- a/Project/app/static/style.css
+++ b/Project/app/static/style.css
@@ -58,24 +58,43 @@ h1 {
     padding: 15px;
 }
 
-#create-account {
+#register {
     position:relative;
 	background-color:orange;;
 	color: white;
     transition: 0.2s all;
-    padding: 10px;
+    padding: 20px;
     border: 20px;
     text-decoration: none;
     left:10px;
     height: 50px;
     width:125px;
-    font-size: 16px;
+    font-size: 14px;
 
 }
 
-#create-account:hover {
-    background-color:  yellow;
-    transform: scale(1.1) perspective(1px)
+#register:hover {
+    background-color:  rgb(255, 208, 0);
+    cursor: pointer;
+  }
+
+.create-account {
+    position:relative;
+	background-color:orange;;
+	color: white;
+    transition: 0.2s all;
+    padding: 20px;
+    border: 20px;
+    text-decoration: none;
+    left:25px;
+    height: 50px;
+    width:125px;
+    font-size: 14px;
+}
+
+.create-account:hover {
+    background-color:  rgb(255, 208, 0);
+    cursor: pointer;
   }
 
 #login{
@@ -93,7 +112,7 @@ h1 {
 
 #login:hover {
     background-color:  rgb(132, 238, 132);
-    transform: scale(1.1) perspective(1px)
+    cursor: pointer;
 }
 
 
